design isearch1 added

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html
         div(class='container')
           div(class="row")
             div(class="col-md-6") Retrieval of embedded metadata by Phil Harvey's&nbsp;
-              a(href='http://owl.phy.queensu.ca/~phil/exiftool/', target='_blank') ExifTool
+              a(href='https://exiftool.org', target='_blank') ExifTool
           div(class="row")
             div(class="col-md-6") This is a free service by&nbsp;
               a(href='http://www.newsit.biz', target='_blank') NewsIT-M.W.Steidl
