--- a/views/pmdresult_isearch1.pug
+++ b/views/pmdresult_isearch1.pug
@@ -78,11 +78,11 @@ block content
                 li Creator (IIM and/or XMP)
                 li Credit line (IIM and/or XMP)
 
-            h4 Shown with the <a href="https://developers.google.com/search/docs/data-types/image-license-metadata" targer="_blank">Licensable badge</a> (NOT yet, later in 2020)
+            h4 Shown with the <a href="https://developers.google.com/search/docs/data-types/image-license-metadata" targer="_blank">Licensable badge</a> (since September 2020)
             ul
                 li Web Statement of Rights (XMP): if it exists the <strong>Licensable</strong> badge is set
                 li Web Statement of Rights (XMP): if it holds a valid URL it is used as link of <strong>License details</strong>
-                li Licensor - Web URL (XMP): if it holds a valid URL it is used as link of the <strong>supplier's/licensor's name</strong>
+                li Licensor URL (XMP): if it holds a valid web URL it is used as link for <strong>Get this image on</strong>
 
             p See below the structured HTML metadata corresponding to the existing IPTC photo metadata (using the JSON-LD format):
             pre
