--- a/views/pmdresult_topics.pug
+++ b/views/pmdresult_topics.pug
@@ -74,7 +74,7 @@ block content
             - var ilfnstds = '/getpmd/html/stds/'+ labeltype + '/?imglfn=' + imglfn + '||' + imageTitle;
             - var ilfncompare = '/getpmd/html/compare/'+ labeltype + '/?imglfn=' + imglfn + '||' + imageTitle;
             - var ilfnisearch1 = '/getpmd/html/isearch1/'+ labeltype + '/?imglfn=' + imglfn + '||' + imageTitle;
-            div(class="col-md-8") <span style="border: 1px black solid; background-color: #ccffe6; padding:3px;"><a href="/">Back to Request Form</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px;margin-left: 10px;"><a href="#{ilfnstds}">Grouped by technical standards</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px; margin-left: 5px;"><a href="#{ilfncompare}">Compared fields</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px; margin-left: 5px;"><a href="#{ilfnisearch1}">Search engine fields</a></span>
+            div(class="col-md-8") <span style="border: 1px black solid; background-color: #ccffe6; padding:3px;"><a href="/">Back to Request Form</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px;margin-left: 10px;"><a href="#{ilfnstds}">Grouped by technical formats</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px; margin-left: 5px;"><a href="#{ilfncompare}">Compared fields</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px; margin-left: 5px;"><a href="#{ilfnisearch1}">Search engine fields</a></span>
 
         div(class="resultdata1")
 
@@ -82,7 +82,7 @@ block content
             table(class='pmd1 table-bordered table-striped table-curved')
                 thead
                     tr
-                        th Field Name
+                        th Field Name (Format)
                         th Field Value
                 tbody
                     each rowL1a in gimgcontOutObj
@@ -92,7 +92,7 @@ block content
             table(class='pmd1 table-bordered table-striped table-curved')
                 thead
                     tr
-                        th Field Name
+                        th Field Name (Format)
                         th Field Value
                 tbody
                     each rowL1a in personOutObj
@@ -102,7 +102,7 @@ block content
             table(class='pmd1 table-bordered table-striped table-curved')
                 thead
                     tr
-                        th Field Name
+                        th Field Name (Format)
                         th Field Value
                 tbody
                     each rowL1a in locationOutObj
@@ -112,7 +112,7 @@ block content
             table(class='pmd1 table-bordered table-striped table-curved')
                 thead
                     tr
-                        th Field Name
+                        th Field Name (Format)
                         th Field Value
                 tbody
                     each rowL1a in othingsOutObj
@@ -123,7 +123,7 @@ block content
             table(class='pmd1 table-bordered table-striped table-curved')
                 thead
                     tr
-                        th Field Name
+                        th Field Name (Format)
                         th Field Value
                 tbody
                     each rowL1a in rightsOutObj
@@ -134,7 +134,7 @@ block content
             table(class='pmd1 table-bordered table-striped table-curved')
                 thead
                     tr
-                        th Field Name
+                        th Field Name (Format)
                         th Field Value
                 tbody
                     each rowL1a in licOutObj
@@ -144,7 +144,7 @@ block content
             table(class='pmd1 table-bordered table-striped table-curved')
                 thead
                     tr
-                        th Field Name
+                        th Field Name (Format)
                         th Field Value
                 tbody
                     each rowL1a in adminOutObj
@@ -154,7 +154,7 @@ block content
             table(class='pmd1 table-bordered table-striped table-curved')
                 thead
                     tr
-                        th Field Name
+                        th Field Name (Format)
                         th Field Value
                 tbody
                     each rowL1a in imgregOutObj
@@ -164,7 +164,7 @@ block content
             table(class='pmd1 table-bordered table-striped table-curved')
                 thead
                     tr
-                        th Field Name
+                        th Field Name (Format)
                         th Field Value
                 tbody
                     each anyprop in anyOutObjTopic
